syntax = "proto3";

package user;

option go_package = "/go-proto";

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool married = 6;
}

service UserService {
    rpc GetUserByID (UserRequest) returns (User);
    rpc GetUsersByIds (UserListRequest) returns (stream User);
}

message UserRequest {
    int32 id = 1;
}

message UserListRequest {
    repeated int32 ids = 1;
}
